updated the address

--- a/views/contactUs.html
+++ b/views/contactUs.html
@@ -77,7 +77,7 @@
 <section class="address">
     <div class="contact-address">
         <h3>WILLS EYE CLINIC</h3>
-        <p>📍 Address: </p>
+        <p>📍 Address: 18 Udenweze Street, New Haven, Enugu State</p>
         <p>📧 Email: <a href="mailto :" class="mail-us">Send direct Email</a></p>
         <p>🕒Work Hours:</p>
         <ul>
@@ -94,7 +94,7 @@
         <div class="footer-container">
             <p class="ready">Ready for clear vision? <a href="#" class="cta-button book btn" >Book Exam</a></p>
             <p class="wills-desc">&copy; <span id="year"></span> Will's Eye Clinic. All rights reserved.</p>
-            <p class="wills-address">📍New Haven, Enugu State | <a href="#">Contact Us</a></p>
+            <p class="wills-address">18 Udenweze street, New Haven, Enugu State |<a href="#">Contact Us</a></p>
         </div>
     </footer>
 
