--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -15,6 +15,7 @@
             background-color: var(--color-light);
             line-height: 1.5;
             scroll-behavior: smooth;
+            display: none;
         }
 
         .container {
