updated staff description

--- a/views/index.html
+++ b/views/index.html
@@ -144,8 +144,8 @@
                     <div class="team-member">
                         <img src="/assets/Dr-Iyke.jpg" alt="Ikenna ejinkeonye">
                         <h4>Ikenna Ejinkeonye</h4>
-                        <p class="role">Ophthalmic Assistant & Ocularist</p>
-                        <!-- <p class="job-desc">Helps patients select the perfect frames and lens technology.</p> -->
+                        <p class="role">Ophthalmic Technician</p>
+                        <p class="job-desc">Helps patients select the perfect frames and lens technology.</p>
                     </div>
 
 
@@ -154,7 +154,7 @@
                         <img src="/assets/Chief-Optometrist.jpg" alt="Catherine">
                         <h4>Catherine Ejinkeonye. <br> OD, MNOA</h4>
                         <p class="role">Optometrist</p>
-                        <!-- <p class="job-desc">Specializes in pediatric vision and digital eye strain.</p> -->
+                        <p class="job-desc">Specializes in pediatric vision and digital eye strain.</p>
                     </div>
 
                     <!-- Team Member 3 -->
@@ -162,7 +162,7 @@
                         <img src="/assets/Admin-Manager.jpg" alt="Udeh Uchechukwu">
                         <h4>Udeh Uchechukwu</h4>
                         <p class="role">Administrative Manager</p>
-                        <!-- <p class="job-desc">Expert in therapeutic contact lens fittings and dry eye care.</p> -->
+                        <p class="job-desc">Oversees clinic operations and administrative duties</p>
                     </div>
 
                    
@@ -171,7 +171,7 @@
                         <img src="/assets/receptionist.jpg" alt="Alexandra">
                         <h4>Nwajiobi Alexandra</h4>
                         <p class="role">Desk person & Receptionist</p>
-                        <!-- <p class="job-desc">Patient reception, booking and other administrative duties.</p> -->
+                        <p class="job-desc">Patient reception, booking and other administrative duties.</p>
                     </div>
                 </div>
             </div>
