updated the service card

--- a/views/index.html
+++ b/views/index.html
@@ -34,7 +34,7 @@
             clearly and live confidently through professional eye examinations, personalized treatments, and high-quality eyewear.
                     </p>
                     <p>
-                     At Wills Eye Clinic, our team of optometrists, ophthalmic assistants, and optical specialists work together to ensure every patient receives expert, compassionate, and affordable care.   
+                     At Wills Eye Clinic, our team of optometrists, ophthalmic assistants, and ophthalmic technicians work together to ensure every patient receives expert, compassionate, and affordable care.   
                     </p>
 
                     <p>See Better. Live Better — with Wills Eye Clinic.</p>
@@ -105,19 +105,23 @@
                     </div>
                 </div>
 
-            <!-- Service 3:  Optical Services -->
+            <!-- Service 3:  ophthalmic Technicians -->
                     <div class="service-card">
-                        <h3> Optical Services 👓</h3>
+                        <h3> Ophthalmic Technicians and Optical Services 👓</h3>
+                       
                         <p>
                        Our optical center offers stylish, durable, and prescription-accurate eyewear for every personality and budget. <br>
                        We provide:
                         </p>
 
-                        <p><b>A wide range of designer and budget-friendly frames</b></p>
-                        <p><b>Prescription lens fitting and customization</b></p>
-                        <p><b>Sunglasses and contact lenses</b></p>
-                        <p><b>Frame repair, lens replacement, and adjustments</b></p>
-                        <p><b>Specialized lenses (anti-reflective, blue-light, and photochromic options)</b></p>
+                        <p><b>Assist Ophthalmologists & Optometrists to reform clinical Procedures</b></p>
+                        <p><b>Collect, document & communicate medical information</b></p>
+                         <p><b>Frame repair, lens replacement, and adjustments</b></p>
+                         <p><b>Eyeglasses and optical aids</b></p>
+                        <p><b>Make, fit and support patients in need of visual services (especially low-vision)</b></p>
+                        <p><b>Operate diagnostic/medical imaging equipments</b></p>
+                        <p><b>Assist eyeHealth personnel during examinations or treatment</b></p>
+                        <p><b>Clean Medical equipment</b></p>
 
                         <p>Our optical experts will help you find the perfect look and lens solution that complements your vision needs and lifestyle.</p>
                     </div>
@@ -171,7 +175,7 @@
                         <img src="/assets/receptionist.jpg" alt="Alexandra">
                         <h4>Nwajiobi Alexandra</h4>
                         <p class="role">Desk person & Receptionist</p>
-                        <p class="job-desc">Patient reception, booking and other administrative duties.</p>
+                        <p class="job-desc">Patient reception, booking and other duties.</p>
                     </div>
                 </div>
             </div>
